--- a/app/src/main/res/layout/activity_registro_tab.xml
+++ b/app/src/main/res/layout/activity_registro_tab.xml
@@ -14,7 +14,7 @@
         android:layout_height="match_parent"
         android:adjustViewBounds="false"
         android:scaleType="centerCrop"
-        app:srcCompat="@drawable/backforms" />
+        app:srcCompat="@drawable/backforms" android:contentDescription="TODO"/>
 
     <TabHost
         android:id="@+id/tabhost"
@@ -159,7 +159,7 @@
                                                   android:layout_marginTop="20dp"
                                                   android:background="@drawable/redondeado_gris"
                                                   android:drawablePadding="20dp"
-                                                  android:hint="Nombre(s)"
+                                                  android:hint="@string/tab2nombre"
                                                   android:inputType="textPersonName"
                                                   android:paddingStart="10dp"
                                                   android:textColorHint="#8d8d8d"
@@ -178,7 +178,7 @@
                                                   android:layout_marginTop="20dp"
                                                   android:background="@drawable/redondeado_gris"
                                                   android:drawablePadding="20dp"
-                                                  android:hint="Apellido Paterno"
+                                                  android:hint="@string/tap2apellidopaterno"
                                                   android:inputType="textPersonName"
                                                   android:paddingStart="10dp"
                                                   android:textColorHint="#8d8d8d"
@@ -197,7 +197,7 @@
                                                   android:layout_marginTop="20dp"
                                                   android:background="@drawable/redondeado_gris"
                                                   android:drawablePadding="20dp"
-                                                  android:hint="Apellido Materno"
+                                                  android:hint="@string/tap2apellidomaterno"
                                                   android:inputType="textPersonName"
                                                   android:paddingStart="10dp"
                                                   android:textColorHint="#8d8d8d"
@@ -257,7 +257,7 @@
                                                   android:drawablePadding="20dp"
                                                   android:gravity="center"
                                                   android:paddingStart="10dp"
-                                                  android:text="Tipo de usuario"
+                                                  android:text="@string/tab2tipodeusuario"
                                                   android:textColor="@android:color/black"
                                                   android:textSize="18sp"
                                                   android:textStyle="bold"
@@ -286,7 +286,7 @@
                                                       android:checked="true"
                                                       android:drawablePadding="20dp"
                                                       android:paddingStart="10dp"
-                                                      android:text="Cliente" />
+                                                      android:text="@string/tab2cliente" />
 
                                                   <RadioButton
                                                       android:id="@+id/rbDueño"
@@ -299,7 +299,7 @@
                                                       android:background="@drawable/redondeado_blanco_transparente"
                                                       android:drawablePadding="20dp"
                                                       android:paddingStart="10dp"
-                                                      android:text="Dueño" />
+                                                      android:text="@string/dueño" />
                                               </RadioGroup>
 
                                               <EditText
@@ -417,7 +417,7 @@
                                                   android:drawablePadding="20dp"
                                                   android:gravity="center"
                                                   android:paddingStart="10dp"
-                                                  android:text="Información del Vehiculo"
+                                                  android:text="@string/tab3informaciondelvehiculo"
                                                   android:textColor="@android:color/black"
                                                   android:textSize="18sp"
                                                   android:textStyle="bold"
@@ -434,7 +434,7 @@
                                                   android:layout_marginTop="20dp"
                                                   android:background="@drawable/redondeado_gris"
                                                   android:drawablePadding="20dp"
-                                                  android:hint="Matrícula"
+                                                  android:hint="@string/tab3matricula"
                                                   android:paddingStart="10dp"
                                                   android:textColorHint="#8d8d8d"
                                                   app:layout_constraintRight_toLeftOf="parent"
@@ -450,7 +450,7 @@
                                                   android:layout_marginTop="20dp"
                                                   android:background="@drawable/redondeado_azul_transparente"
                                                   android:padding="12dp"
-                                                  android:text="Registrar"
+                                                  android:text="@string/tab3registrar"
                                                   app:layout_constraintRight_toRightOf="parent"
                                                   app:layout_constraintTop_toBottomOf="@+id/etMatricula" />//>
                                           </android.support.constraint.ConstraintLayout>
@@ -469,7 +469,7 @@
                             android:layout_marginTop="20dp"
                             android:background="@drawable/redondeado_gris"
                             android:drawablePadding="20dp"
-                            android:hint="Nombre del estacionamiento"
+                            android:hint="@string/tab4nombredelestacionamiento"
                             android:paddingStart="10dp"
                             android:textColorHint="#8d8d8d"
                             app:layout_constraintLeft_toLeftOf="parent"
@@ -485,7 +485,7 @@
                             android:layout_marginTop="20dp"
                             android:background="@drawable/redondeado_gris"
                             android:drawablePadding="20dp"
-                            android:hint="RFC"
+                            android:hint="@string/tab4rfc"
                             android:paddingStart="10dp"
                             android:textColorHint="#8d8d8d"
                             app:layout_constraintRight_toLeftOf="parent"
@@ -502,7 +502,7 @@
                             android:layout_marginTop="20dp"
                             android:background="@drawable/redondeado_gris"
                             android:paddingStart="10dp"
-                            android:text="Horario"
+                            android:text="@string/tab4horario"
                             android:textAlignment="center"
                             android:textColor="@android:color/black"
                             android:textSize="18sp"
@@ -520,7 +520,7 @@
                             android:background="@drawable/redondeado_gris"
                             android:paddingStart="10dp"
                             android:paddingTop="5dp"
-                            android:text="De:"
+                            android:text="@string/tab4de"
                             android:textColor="@color/negro"
                             app:layout_constraintStart_toStartOf="parent"
                             app:layout_constraintEnd_toStartOf="@id/spHoraInic"
@@ -549,7 +549,7 @@
                             android:background="@drawable/redondeado_gris"
                             android:paddingStart="10dp"
                             android:paddingTop="5dp"
-                            android:text="A:"
+                            android:text="@string/tab4a"
                             android:textColor="@color/negro"
                             app:layout_constraintTop_toBottomOf="@+id/tvHora"
                             app:layout_constraintStart_toEndOf="@id/spHoraInic"
@@ -579,7 +579,7 @@
                             android:layout_marginRight="10dp"
                             android:background="@drawable/redondeado_gris"
                             android:paddingStart="10dp"
-                            android:text="Precio"
+                            android:text="@string/tab4precio"
                             android:textAlignment="center"
                             android:textColor="@android:color/black"
                             android:textSize="18sp"
@@ -599,7 +599,7 @@
                             android:background="@drawable/redondeado_gris"
                             android:drawableLeft="@drawable/ic_attach_money_black_24dp"
                             android:drawablePadding="20dp"
-                            android:hint="Precio por hora"
+                            android:hint="@string/tab4precioporhora"
                             android:inputType="numberDecimal"
                             android:paddingStart="10dp"
                             android:textColorHint="#8d8d8d"
@@ -617,7 +617,7 @@
                             android:background="@drawable/redondeado_gris"
                             android:drawableLeft="@drawable/ic_attach_money_black_24dp"
                             android:drawablePadding="20dp"
-                            android:hint="Precio por fraccion"
+                            android:hint="@string/tab4precioporfraccion"
                             android:inputType="numberDecimal"
                             android:paddingStart="10dp"
                             android:textColorHint="#8d8d8d"
@@ -656,7 +656,7 @@
                             android:drawablePadding="20dp"
                             android:gravity="center"
                             android:paddingStart="10dp"
-                            android:text="Dirección"
+                            android:text="@string/tab5direccion"
                             android:textColor="@android:color/black"
                             android:textSize="18sp"
                             android:textStyle="bold"
@@ -673,7 +673,7 @@
                             android:layout_marginTop="20dp"
                             android:background="@drawable/redondeado_gris"
                             android:drawablePadding="20dp"
-                            android:hint="Calle"
+                            android:hint="@string/tab5calle"
                             android:inputType="textPersonName"
                             android:paddingStart="10dp"
                             android:textColorHint="#8d8d8d"
@@ -722,7 +722,7 @@
                             android:layout_marginTop="20dp"
                             android:background="@drawable/redondeado_gris"
                             android:drawablePadding="20dp"
-                            android:hint="Codigo Postal"
+                            android:hint="@string/tab5cp"
                             android:inputType="textPersonName"
                             android:paddingStart="10dp"
                             android:textColorHint="#8d8d8d"
@@ -737,7 +737,7 @@
                             android:layout_marginTop="20dp"
                             android:background="@drawable/redondeado_gris"
                             android:drawablePadding="20dp"
-                            android:hint="Ciudad"
+                            android:hint="@string/tab5Ciudad"
                             android:inputType="textPersonName"
                             android:paddingStart="10dp"
                             android:textColorHint="#8d8d8d"
@@ -753,7 +753,7 @@
                             android:layout_marginTop="20dp"
                             android:background="@drawable/redondeado_gris"
                             android:drawablePadding="20dp"
-                            android:hint="Estado"
+                            android:hint="@string/tab5estado"
                             android:inputType="textPersonName"
                             android:paddingStart="10dp"
                             android:textColorHint="#8d8d8d"
@@ -768,7 +768,7 @@
                             android:layout_marginTop="20dp"
                             android:background="@drawable/redondeado_azul_transparente"
                             android:padding="12dp"
-                            android:text="Registrar"
+                            android:text="@string/tab3registrar"
                             app:layout_constraintRight_toRightOf="parent"
                             app:layout_constraintTop_toBottomOf="@id/etEstado" />
                     </android.support.constraint.ConstraintLayout>
